--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@
 /* Nav-bar */
 body {
     margin: 0 auto;
-    background-image:url('images/matrix-code.gif');
+    background-image: url('images/matrix-code.gif');
     width: 1000px;
 }
 
 .nav-bar {
-    background-color:chartreuse;
+    background-color: chartreuse;
     height: 50px;
     display: flex;
     align-items: center;
@@ -20,7 +20,7 @@ body {
     margin-bottom: 150px;
 }
 
-a {
+.top {
     color: black;
     text-decoration: none;
     font-size: larger;
@@ -32,7 +32,7 @@ a {
 .name-container {
     height: 200px;
     width: 300px;
-    background-color:rgb(31, 32, 34);
+    background-color: rgb(31, 32, 34);
     border: 2px solid chartreuse;
     margin-left: 340px;
     border-radius: 25%;
@@ -58,6 +58,7 @@ a {
     justify-content: space-evenly;
     margin-bottom: 400px;
 }
+
 img {
     height: 200px;
     width: 200px;
@@ -81,7 +82,7 @@ button {
 
 /* about page */
 
-.about-box {
+.box {
     width: 90%;
     margin-left: 50px;
     margin-right: 100px;
@@ -89,7 +90,7 @@ button {
     height: 900px;
     border-radius: 25%;
     border: 2px solid chartreuse;
-    margin-bottom: 300px;
+    margin-bottom: 500px;
     font-family: courier;
     color: chartreuse;
     text-align: center;
@@ -127,6 +128,8 @@ button {
     margin: 60px 10px 10px 10px;
 }
 
+
+
 p {
     margin-bottom: 10px;
 }
@@ -143,7 +146,7 @@ p {
     width: 500px;
     background-color: black;
     border: 2px solid chartreuse;
-    border-radius: 20%;
+    border-radius: 15%;
     margin-left: 200px;
     margin-top: 50px;
     font-family: courier;
@@ -153,6 +156,8 @@ p {
 
 a {
     color: chartreuse;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 .email-box {
@@ -169,4 +174,118 @@ a {
 
 h3 {
     margin-top: 10px;
+}
+
+/* Project page */
+
+.project-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 20px;
+}
+
+.trio {
+    height: 100px;
+    width: 50x;
+    margin-top: 50px;
+    margin-left: 20px;
+}
+
+.current {
+    margin-top: 50px;
+}
+
+.pie-chart {
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    background: conic-gradient(green 0.00%, blue 0.00% 23%, yellow 23% 50%, red 50%);
+    margin-left: 300px;
+    margin-top: 100px;
+}
+
+
+
+@media (max-width: 500px) {
+    body {
+        width: 500px;
+        margin: 0 auto;
+        background-image: url('images/matrix-code.gif');
+        align-content: center;
+    }
+
+    .name-container {
+        margin-left: 100px;
+    }
+
+    img {
+        height: 150px;
+        width: 150px;
+        margin-right: 15px;
+    }
+
+    .classified {
+        font-size: x-small;
+        margin-right: 15px;
+    }
+
+    .logo {
+        height: 50px;
+        width: 50px;
+    }
+
+    .image-box {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .trip {
+        height: 100px;
+        width: 100px;
+    }
+
+    .about-box {
+        margin-top: 100px;
+    }
+
+    .info {
+        height: 550px;
+        width: 300px;
+    }
+
+    .contact-box {
+        height: 150px;
+        width: 300px;
+        background-color: black;
+        border: 2px solid chartreuse;
+        border-radius: 15%;
+        margin-left: 50px;
+        margin-top: 50px;
+        font-family: courier;
+        color: chartreuse;
+        text-align: center;
+    }
+
+    .contact {
+        height: 20px;
+        width: 20px;
+    }
+
+    .linkage {
+        font-size: small;
+    }
+
+    .pie-chart {
+        height: 200px;
+        width: 200px;
+        margin-left: 130px;
+    }
+    .box {
+        margin-left: 15px;
+    }
+
+
+
 }
