--- a/style.css
+++ b/style.css
@@ -6,28 +6,49 @@
 /* Nav-bar */
 body {
     margin: 0 auto;
-    background-image: url('images/matrix-code.gif');
+    background-image: url('images/matrix.gif');
     width: 1000px;
 }
 
 .nav-bar {
-    background-color: chartreuse;
+    background-color: rgb(31, 32, 34);
     height: 50px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     font-family: Courier;
     margin-bottom: 150px;
+    border: 2px solid chartreuse;
 }
 
 .top {
-    color: black;
+    color: chartreuse;
     text-decoration: none;
     font-size: larger;
     font-weight: bold;
 }
 
 /* Name container */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+
+
+
+#str {
+    width: 100%;
+    padding: 20px;
+    height: auto;
+    font-family: courier;
+    font-size: 1 em;
+    margin: 60px 20px 0 0;
+    color: chartreuse;
+}
 
 .name-container {
     height: 200px;
@@ -63,6 +84,7 @@ img {
     height: 200px;
     width: 200px;
     background-color: none;
+    transition: 500ms;
 }
 
 button {
@@ -75,6 +97,8 @@ button {
     font-family: courier;
     font-weight: bold;
 }
+
+
 
 .classified {
     position: absolute;
@@ -96,6 +120,8 @@ button {
     text-align: center;
     padding-top: 20px;
 }
+
+
 
 .top-card {
     display: flex;
@@ -125,7 +151,7 @@ button {
 }
 
 .bio {
-    margin: 60px 10px 10px 10px;
+    margin: 60px 20px 0 0px;
 }
 
 
@@ -196,14 +222,21 @@ h3 {
     margin-top: 50px;
 }
 
-.pie-chart {
-    height: 300px;
-    width: 300px;
-    border-radius: 50%;
-    background: conic-gradient(green 0.00%, blue 0.00% 23%, yellow 23% 50%, red 50%);
-    margin-left: 300px;
-    margin-top: 100px;
+
+body {
+    font-family: courier;
 }
+
+#chartdiv {
+    width: 700px;
+    height: 500px;
+    margin-left: 100px;
+    margin-top: 50px;
+    background-color: chartreuse;
+    color: chartreuse;
+    border-radius: 25%;
+}
+
 
 
 
@@ -211,12 +244,23 @@ h3 {
     body {
         width: 500px;
         margin: 0 auto;
-        background-image: url('images/matrix-code.gif');
+        background-image: url('images/matrix.gif');
         align-content: center;
+    }
+    
+    .nav-bar {
+        background-color: chartreuse;
+        color: black;
     }
 
     .name-container {
         margin-left: 100px;
+        background-color: chartreuse;
+        color: black;
+    }
+
+    .top {
+        color: black;
     }
 
     img {
@@ -231,8 +275,8 @@ h3 {
     }
 
     .logo {
-        height: 50px;
-        width: 50px;
+        height: 30px;
+        width: 30px;
     }
 
     .image-box {
@@ -240,6 +284,18 @@ h3 {
         align-items: center;
         justify-content: space-evenly;
     }
+
+    #str {
+        width: 100%;
+        padding: 20px;
+        height: auto;
+        font-family: courier;
+        font-size: 1 em;
+        margin: 10px 10px 0px 0px;
+        color: chartreuse;
+
+    }
+
 
     .trip {
         height: 100px;
@@ -261,7 +317,7 @@ h3 {
         background-color: black;
         border: 2px solid chartreuse;
         border-radius: 15%;
-        margin-left: 50px;
+        margin-left: 80px;
         margin-top: 50px;
         font-family: courier;
         color: chartreuse;
@@ -282,9 +338,32 @@ h3 {
         width: 200px;
         margin-left: 130px;
     }
+
     .box {
         margin-left: 15px;
+        background-color: chartreuse;
+        color: black;
     }
+
+    .skill {
+        background-color: chartreuse;
+        color: black;
+    }
+
+    #chartdiv {
+        width: 430px;
+        height: 300px;
+        margin-left: 10px;
+        margin-top: 10px;
+        background-color: chartreuse;
+        color: chartreuse;
+        border-radius: 25%;
+    }
+
+    .weather {
+        color:black;
+    }
+    
 
 
 
