--- a/style.css
+++ b/style.css
@@ -395,6 +395,11 @@ body {
         margin-right: 15px;
     }
 
+    .sizing {
+        height: 80%;
+        width: 80%;
+    }
+
     .logo {
         height: 50px;
         width: 50px;
